--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 To use this program you need:
 	- Lua 5.1 or higher
 	- LuaSocket 2.0 or higher
-	- JSON4Lua 0.9.30 or higher
+	- JSON4Lua 0.9.40 or higher (included)
